# Nmet

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  ]  build.sh  first.ppm  grammar.pest  grammar.txt  index.html  nmt.vim  output.ppm  test.nmt  test.ppm
_app/: version.json
asm/: .gitignore  build.sh  div.asm  fp_print.c  func_call.asm  main  print.asm  print.c  socket  sockets.c  test.asm  test.lst
docs/: README.md
examples/: .gitignore  01-hello_world.nmt  02-stars.nmt  02-stars.txt  03-rule110.nmt  07-game_window.nmt  08-library.nmt  arrays.nmt  conditions.nmt  fibonacci.nmt  floats.nmt  functions.nmt  game.nmt  hello_world.nmt  macros.nmt  negative.nmt  power.nmt  preprocessing.nmt  rule110.nmt  rule110.txt  simple_calc.nmt  stars.nmt  web_server.nmt
extensions/: README.md
site/: package.json  svelte.config.js  tailwind.config.js  vite.config.js
site/src/: fonts.css
src/: bif.rs  codegen.rs  command_line.rs  compiler.rs  elf.rs  error_handeling.rs  instructions.rs  lexer.rs  macros.rs  main.rs  nemet_macros.rs  output_generator.rs  parser.rs  terms.rs  tests.rs  type_check.rs  utils.rs
std/: core.nmt  fmt.nmt  io.nmt  sys.nmt  syscalls.nmt
tests/: arrays.nmt  assign.nmt  assign.txt  binary_expr.nmt  compare_expr.nmt  compare_expr.txt  conditions.nmt  conditions.txt  cont_break.nmt  defer.nmt  elf.nmt  elf_binary_expr.nmt  ffi.nmt  for_loops.nmt  functions.nmt  loops.nmt  power.nmt  static_var.nmt  string_expr.nmt  string_expr.txt  structs.nmt
x86/: .gitignore  Cargo.toml  instrs.txt
(+94 files in other folders)
