[package]
name = "nmet"
version = "0.1.0"
edition = "2021"
authors = ["Mahan Farzaneh"]
homepage = "https://mahanfarzaneh2000.github.io/Nmet/"
license = "MIT"
description = "A general purpose statically typed and compiled programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
